# grinch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Grinch.entitlements  Info.plist  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
bench/: README.md  run.sh
bench/configs/: 01-floor.grinch.js  02-default.grinch.js  03-strip.grinch.js  04-bare.grinch.js  05-domain.grinch.js  06-regex.grinch.js  07-wildcard.grinch.js  08-slow-native.grinch.js  09-slow-dynopen.grinch.js  10-slow-early.grinch.js  11-slow-drop.grinch.js  12-slow-proto.grinch.js  13-slow-slack.grinch.js  14-many-rules.grinch.js
docs/: index.html  style.css
examples/: expand-shortener.sh  grinch.example.js
scripts/: release-notes.sh
src/: app_delegate.rs  chromium.rs  engine.rs  firefox.rs  helpers.rs  loader.rs  main.rs  session_handler.rs  workspace.rs
tools/: render-icon.swift
